--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-  <section id="title">
+  <section class="colored-section" id="title">
     <div class="container-fluid">
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
@@ -59,7 +59,7 @@
 
     <!-- Features -->
 
-    <section id="features">
+    <section class="white-section" id="features">
       <div class="container-fluid">
         <div class="row">
           <div class="feature-box col-lg-4">
@@ -85,7 +85,7 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="colored-section" id="testimonials">
     <div class="container-fluid">
     <div id="testimonial-carousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -122,7 +122,7 @@
 
     <!-- Press -->
 
-    <section id="press">
+    <section class="colored-section" id="press">
       <img src="images/techcrunch.png" alt="tc-logo" class="press-img">
       <img src="images/tnw.png" alt="tnw-logo" class="press-img">
       <img src="images/bizinsider.png" alt="biz-insider-logo" class="press-img">
@@ -133,7 +133,7 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section" id="pricing">
 
     <div class="container-fluid">
     <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
@@ -194,7 +194,7 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="colored-section" id="cta">
     <div class="container-fluid">
       <h3 id="cta-h3">Find the True Love of Your Dog's Life Today.</h3>
       <button type="button" class="cta-btn btn btn-dark btn-lg"><i class="fa-brands fa-apple"></i> Download</button>
@@ -205,7 +205,7 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer class="white-section" id="footer">
     <div class="container-fluid">
     <p>
       <i class="footer-icon fa-brands fa-twitter"></i>
